--- a/src/pages/UI/index.html
+++ b/src/pages/UI/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   <link rel="stylesheet" href="../STYLE/style.css">
+    <link rel="stylesheet" href="..//STYLE/style2.css">
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
-    <script type="module" src="../JS/main.js"></script>
+   <nav class="nav">
+  <ul class="menu">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="products.html">Products</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+
+  <div class="logo">
+    <img src="img2/icons/comfy (1).png" alt="">
+  </div>
+
+ <img class="karzina" src="img2/icons/map_grocery-or-supermarket (1).png" alt="">
+         <div style="margin-left: 1400px; position: relative; top: -90px; left: 10px;">
+            <img class="red" src="img2/icons/Ellipse 30.png" alt="">
+            <p class="cnt" style="color: white;">0</p>
+         </div>
+
+<div style="padding: 70px; display: flex; flex-direction: column; gap: 0;">
+      <h1 class="title">Rest, Relax, Unwind</h1>
+  <h1 class="t2">Embrace your choices - we do</h1>
+  <button class="btnShow"><a href="products.html">SHOW NOW</a></button>
+</div>
+
+</nav>
+<main style="display: flex; justify-content: center; margin-top: 100px;">
+    <h1 style="font-size: 50px; cursor: pointer;"> <span style="color: orange;">/  </span>Featured</h1>
+</main>
+<div style="display: flex; justify-content: space-around;">
+<div style="text-align: center;">
+    <img src="img2/" alt="">
+    <img src="img2/mebel/Rectangle 41 (1).png" alt="">
+<h1 style="color: gray;">High-Back Bench</h1>
+<h4>9,99$</h4>
+</div>
+<div style="text-align: center;">
+    <img src="img2/" alt="">
+    <img width="387" height="200" src="https://brend-mebel.ru/image/data/i/bb/pf/5777195117ee0552e7f6fa03b85a0422.jpg" alt="">
+<h1 style="color: gray;">Dining Table</h1>
+<h4>9,99$</h4>
+</div>
+<div style="text-align: center;">
+    <img src="img2/" alt="">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSetIMGpVNdOxJyX0ggPgir7HswSLDYBvZhtQ&s" alt="">
+<h1 style="color: gray;">Accent Chair</h1>
+<h4>9,99$</h4>
+</div>
+</div>
+<div style="margin-top: 20px; display: flex; justify-content: center; align-items: center; margin-left: 70px;">
+<a href="products.html"><button style="width: 220px; height: 52px; border-radius: 5px; color: white; cursor: pointer; border: none; background-color: #BA5D2C;">ALL PRODUCTS</button></a>
+</div>
+    <script type="module" src="..//JS/main.js"></script>
 </body>
 </html>
